# hm-cli

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  cli.py  pyproject.toml
.claude/memory/: MEMORY.md  project_security_system.md  skill_permissions_system.md
.hermes/skills/: example.py
docs/: 20260413-001-code-review.md  20260420-001-code-review.md  memory-multi-source-retrieval-design.md  multi-channel-dialogue.md
docs/plans/: 2026-04-11-001-feat-hermes-core-tools.md  2026-04-15-001-feat-memory-system-plan.md  20260413-arch-refactor.md
hermes/: agent.py  config.py  context.py  scheduler.py  security.py  tools.py
hermes/agents/: __init__.py  agent.py
hermes/app/: __init__.py  bootstrap.py  llm_config.py  ports.py  settings.py
hermes/channels/: __init__.py  feishu.py  qq.py
hermes/core/: __init__.py  agent.py  skill_permissions.py  soul.py
hermes/core/memory/: __init__.py  bm25.py  compression.py  (+8 more)
hermes/prompts/: system.md
hermes/services/: __init__.py  channel_service.py  chat_service.py  llm_config_service.py  llm_wiki_workspace.py  model_catalog_service.py  project_service.py  skill_service.py  task_service.py
hermes/skills/: __init__.py  registry.py
hermes/tools/: __init__.py  bash.py  confirm.py  file.py  skill_loader.py
scripts/: test_memory_e2e.py
tests/: test_channel_service.py  test_feishu_channel.py  test_memory.py  test_qq_channel.py
web/: Dockerfile.backend  README.md  docker-compose.yml  start-dev.sh
web/backend/: app_state.py  main.py  requirements.txt  session_manager.py  start.py
web/frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json
(+69 files in other folders)
