[project]
name = "hm-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fire>=0.7.1",
    "langchain>=1.2.15",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.6",
    "orjson>=3.10.0",
    "prompt-toolkit>=3.0.0",
    "python-dotenv>=1.2.2",
    "rich>=14.3.3",
]
