[project]
name = "hm-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.0",
    "fire>=0.7.1",
    "langchain>=1.2.15",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.6",
    "lark-oapi>=1.5.5",
    "orjson>=3.10.0",
    "prompt-toolkit>=3.0.0",
    "python-dotenv>=1.2.2",
    "python-frontmatter>=1.1.0",
    "pyyaml>=6.0.0",
    "qq-botpy>=1.2.1",
    "rich>=14.3.3",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.136.0",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.26",
    "uvicorn>=0.44.0",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
